--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
             <button id="enterroom" onclick="enter()">Enter</button>
         </div>
 </div>
-<button id="createroom" onclick="location.href='/create-room'">Create Room</button>
+<button id="createroom" class="mobileblind" onclick="location.href='/create-room'">Create Room</button>
 <br>
 <button id="createroom" onclick="location.href='/logout'">Logout</button>
 
