--- a/static/indexstyletext.css
+++ b/static/indexstyletext.css
@@ -1,20 +1,23 @@
 /* PC LAYOUT */
 @media (min-width:601px) {
 
-   ul{
-    padding-left: 45%;
-   }
-    h1{
+    ul {
+        padding-left: 45%;
+    }
+
+    h1 {
         text-align: center;
     }
-    h3{
+
+    h3 {
         text-align: center;
     }
 
 
-    #button{
-        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-        background-color: #4CAF50; /* Green */
+    #button {
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        background-color: #4CAF50;
+        /* Green */
         border: none;
         color: white;
         padding: 15px 32px;
@@ -24,46 +27,47 @@
         font-size: 16px;
         margin: 4px 2px;
         cursor: pointer;
-        -webkit-transition-duration: 0.4s; /* Safari */
+        -webkit-transition-duration: 0.4s;
+        /* Safari */
         transition-duration: 0.4s;
 
     }
+
     #increment {
         display: none
-
-    } 
+    }
 
     #decrement {
         display: none
+    }
+
+    .roomlist {
+        top: 50%;
+        left: 50%;
+    }
+
+    #enterroom {
+        display: none
+    }
+
+    #createroom {
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        background-color: #4CAF50;
+        /* Green */
+        border: none;
+        color: white;
+        padding: 0px 5px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        -webkit-transition-duration: 0.4s;
+        /* Safari */
+        transition-duration: 0.4s;
 
     }
-    
-    .roomlist{
-        top:50%;
-        left: 50%;
-       }
-    
-    #enterroom {
-    display: none
-
-} 
-
-#createroom{
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 0px 5px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-
-}
 
 }
 
@@ -72,64 +76,51 @@
 /* Mobile Layout */
 @media (max-width:600px) {
 
-    ul{
-     padding-left: 45%;
+    ul {
+        padding-left: 45%;
     }
-     h1{
-         text-align: center;
-     }
-     h3{
-         text-align: center;
-     }
- 
- 
-     #button{
-         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-         background-color: #4CAF50; /* Green */
-         border: none;
-         color: white;
-         padding: 15px 32px;
-         text-align: center;
-         text-decoration: none;
-         display: inline-block;
-         font-size: 16px;
-         cursor: pointer;
-         -webkit-transition-duration: 0.4s; /* Safari */
-         transition-duration: 0.4s;
- 
-     }
-     #increment {
-         display: none
- 
-     } 
- 
-     #decrement {
-         display: none
- 
-     }
-     
-     .roomlist{
-         top:50%;
-        }
-     
-     #enterroom {
-     display: none
- 
- } 
- #createroom{
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 0px 5px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
+
+    h1 {
+        text-align: center;
+    }
+
+    h3 {
+        text-align: center;
+    }
+
+
+    #button {
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        background-color: #4CAF50;
+        /* Green */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        cursor: pointer;
+        -webkit-transition-duration: 0.4s;
+        /* Safari */
+        transition-duration: 0.4s;
+
+    }
+
+    #increment {
+        display: none
+    }
+
+    #decrement {
+        display: none
+    }
+
+    .roomlist {
+        top: 50%;
+    }
+
+    #enterroom {
+        display: none
+    }
 
 }
- }
